fixed the swimming pool section mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -80,5 +80,9 @@ body {
     repeat fixed 100%;
   background-position: center;
   background-size: cover;
+
+  @media (width <= 600px) {
+    height: 450px;
+  }
 }
 /* swimming pool section ⬆️ */
